--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -11,6 +11,19 @@ body {
     line-height: $line-height-base;
 }
 
+html, body {
+    height: 100%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+.x-app-layout > .d-flex {
+    flex: 1;
+}
+
 .logo {
     width: 35px;
 }
@@ -85,3 +98,5 @@ body {
 .footerProvider{
     margin-top: 30px;
 }
+
+
